--- a/style.css
+++ b/style.css
@@ -337,20 +337,22 @@ input[type="submit"]:focus {
 .team .content-team {
     display: flex;
     max-width: 1250px;
-    margin: auto;
+    margin: 100px;
     margin-top: 100px;
     font-family: "Rubik", serif;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 
 .team .image-team img {
     width: 90%;
+    margin-left: 28%;
 
 }
 
 .team .text-team {
     max-width: 600px;
     padding: 50px;
+
 }
 
 .team .text-team h1 {
@@ -367,5 +369,4 @@ input[type="submit"]:focus {
     font-size: 18px;
     color: #555;
     line-height: 1.6;
-
 }
