--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body {
 
 
 .form-wrapper {
-    background-color: #1A1B1C;
+    background-color: #242526;
     padding: 10px;
     border-radius: 15px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -172,8 +172,8 @@ body {
 
 form {
     display: flex;
-    /* flex-direction: column; */
-    gap: 10px;
+    flex-direction: column;
+    gap: 3px;
 
 }
 
@@ -189,11 +189,11 @@ textarea,
 select {
     padding: 12px;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border: 1px solid #aeaeae;
     border-radius: 8px;
     width: 100%;
     box-sizing: border-box;
-    color: #000;
+    color: #FBFAF8;
 }
 
 textarea {
@@ -210,7 +210,7 @@ select {
 
 input[type="submit"] {
     background-color: #FF6214;
-    color: white;
+    color: #FBFAF8;
     border: none;
     padding: 12px;
     font-size: 16px;
@@ -228,7 +228,7 @@ input[type="submit"]:focus {
 }
 
 form label {
-    color: #000;
+    color: #FBFAF8;
     font-size: 14px;
     margin-bottom: 5px;
     display: block;
