--- a/style.css
+++ b/style.css
@@ -131,10 +131,10 @@ body {
     overflow: hidden;
 }
 
-/* .booking-content {
+.booking-content {
     display: flex;
 
-} */
+}
 
 .booking-text {
     color: #FBFAF8;
