--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ body {
 }
 
 .form-wrapper {
-    background-color: #FBFAF8;
+    background-color: #232424;
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -194,6 +194,13 @@ select {
 textarea {
     resize: vertical;
     height: 150px;
+}
+
+form label {
+    font-size: 16px;
+    margin-bottom: 10px;
+    display: block;
+    color: #FBFAF8;
 }
 
 select {
