--- a/style.css
+++ b/style.css
@@ -282,6 +282,7 @@ input[type="submit"]:focus {
 }
 
 /* Container for the entire section */
+/* Container for the entire section */
 .trees {
     position: relative;
     width: 100%;
@@ -302,12 +303,11 @@ input[type="submit"]:focus {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('<?php echo $treeimg["url"]; ?>');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-color: rgba(0, 0, 0, 0.5);
-    /* Black overlay */
+    /* Black overlay with opacity */
     z-index: 1;
     /* Behind content */
 }
