--- a/style.css
+++ b/style.css
@@ -12,37 +12,38 @@ body {
     background-color: #FBFAF8;
 }
 
+/* Basic styles for the nav bar */
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 150px;
-    font-family: "Rubik", serif;
-    z-index: 1;
-    position: relative;
-
+    padding: 0 20px;
 }
 
-.nav ul {
-    list-style: none;
-    display: flex;
-    gap: 30px;
-
-}
-
-.nav ul li {
-    color: rgb(26, 25, 25);
-    cursor: pointer;
-
-}
-
-.nav ul li:hover {
-    color: #FF6214;
-}
-
-.nav .logo img {
+.logo img {
     width: 150px;
     height: auto;
+}
+
+ul.menu {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+ul.menu li {
+    display: inline-block;
+}
+
+ul.menu li a {
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+    padding: 10px;
+}
+
+ul.menu li a:hover {
+    color: #FF6214;
 }
 
 .hero {
