--- a/style.css
+++ b/style.css
@@ -384,3 +384,20 @@ input[type="submit"]:focus {
     color: #555;
     line-height: 1.6;
 }
+
+.hero video {
+    z-index: -10000;
+    width: 100%;
+    object-fit: cover;
+
+}
+
+.videooverlay::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.768), rgba(0, 0, 0, 0));
+
+}
