--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ ul.menu li a:hover {
 
 .booking-text {
     color: #FBFAF8;
-    font-family: "Rubik", serif;
+    font-family: "Dela Gothic One", serif;
     max-width: 544px;
 }
 
