--- a/style.css
+++ b/style.css
@@ -442,3 +442,9 @@ input[type="submit"]:focus {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.768), rgba(0, 0, 0, 0));
 
 }
+
+.wpcf7 form.sent .wpcf7-response-output {
+    color: #FBFAF8;
+    font-family: "Rubik", serif;
+
+}
