--- a/style.css
+++ b/style.css
@@ -448,3 +448,85 @@ input[type="submit"]:focus {
     font-family: "Rubik", serif;
 
 }
+
+.footer {
+    position: relative;
+    background-color: #1A1B1C;
+    color: #fff;
+    font-family: 'Arial', sans-serif;
+    padding: 40px 100px;
+
+}
+
+.footer::after {
+    content: '';
+    position: absolute;
+    top: -9.9vw;
+    left: 0;
+    height: 0;
+    width: 0;
+    border-right: 100vw solid #1A1B1C;
+    border-top: 10vw solid transparent;
+    z-index: 1;
+}
+
+
+.footer-top {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.footer-left {
+    min-width: 250px;
+
+}
+
+.footer-left .logo {
+    width: 180px;
+    margin-right: 20%;
+    margin-bottom: 10px;
+
+}
+
+.footer-text p {
+    margin-bottom: 10px;
+}
+
+.social-icons {
+    margin-top: 10px;
+}
+
+.social-icons a img {
+    width: 24px;
+    margin-right: 10px;
+    margin-left: 16%;
+
+}
+
+.footer-text {
+    margin-left: 16%;
+    font-size: 14px;
+}
+
+.footer-right .nuento-partner {
+    margin-top: 20px;
+    width: 150px;
+}
+
+.footer-credits {
+    text-align: center;
+    flex-basis: 100%;
+    margin-top: 20px;
+    font-size: 12px;
+    color: #777;
+}
+
+@media (max-width: 768px) {
+    .footer-top {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+}
