--- a/style.css
+++ b/style.css
@@ -202,11 +202,11 @@ ul.menu li a:hover {
     margin-bottom: 6%;
 }
 
-/* .booking-img img {
+.booking-img img {
     width: 800px;
     height: auto;
     margin-top: 5%;
-} */
+}
 
 .form-wrapper {
     background-color: #232424;
