--- a/style.css
+++ b/style.css
@@ -624,6 +624,22 @@ footer a:hover {
         margin-top: 5%;
     }
 
+    .content-team {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .image-team {
+        width: 60%;
+        margin-right: 28%;
+    }
+
+    .text-team {
+        max-width: 100%;
+        padding: 10%;
+    }
+
 
 }
 
