--- a/style.css
+++ b/style.css
@@ -668,11 +668,10 @@ footer a:hover {
         font-size: 250%;
     }
 
-    .booking-content {
+    .from wrapper {
         flex-direction: column;
         align-items: center;
-        gap: 20px;
-        /* Adjust gap to prevent crowding */
+
     }
 
     .map .text h1 {
@@ -709,11 +708,10 @@ footer a:hover {
         padding: 10px;
     }
 
-    .booking-content {
+    .form-wrapper {
         flex-direction: column;
         align-items: center;
-        gap: 20px;
-        /* Adjust gap to prevent crowding */
+
     }
 
     .contact-form {
