--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ input[type="submit"]:focus {
 .team .text-team {
     /* max-width: 600px; */
     padding-left: 5.5%;
-    padding-right: 10%;
+    padding-right: 8%;
 }
 
 .team .text-team h1 {
@@ -573,7 +573,7 @@ footer a:hover {
     .map .content {
         flex-direction: column;
         align-items: center;
-        text-align: center;
+        text-align: left;
     }
 
     .map .image img {
@@ -629,7 +629,7 @@ footer a:hover {
     .content-team {
         flex-direction: column;
         align-items: center;
-        text-align: center;
+        text-align: left;
     }
 
     .image-team {
@@ -672,7 +672,7 @@ footer a:hover {
         font-size: 250%;
     }
 
-    .from wrapper {
+    .from-wrapper {
         flex-direction: column;
         align-items: center;
 
