--- a/style.css
+++ b/style.css
@@ -687,8 +687,18 @@ footer a:hover {
         font-size: 120%;
     }
 
-    .footer .footer-left .footer-text {
-        font-size: 14px;
+    .footer .footer-left {
+
+        margin-bottom: 20px;
+    }
+
+    .footer .footer-left .footer-logo img {
+        margin: 0 auto;
+    }
+
+    .footer .footer-right img {
+        width: 80%;
+        margin: 0 auto;
     }
 }
 
