--- a/style.css
+++ b/style.css
@@ -703,7 +703,7 @@ footer a:hover {
         max-width: 100%;
     }
 
-    .text-team h1 {
+    .team .text-team h1 {
         font-size: 250%;
         line-height: 100%;
     }
