--- a/style.css
+++ b/style.css
@@ -655,7 +655,7 @@ footer a:hover {
         margin-left: 10px;
     }
 
-    .contact-form {
+    .form {
         flex-direction: column;
         align-items: center;
     }
