--- a/style.css
+++ b/style.css
@@ -658,6 +658,7 @@ footer a:hover {
     .form {
         flex-direction: column;
         align-items: center;
+        margin-left: 5%;
     }
 
     .contact-form input,
