--- a/style.css
+++ b/style.css
@@ -275,8 +275,7 @@ input[type="submit"]:focus {
     outline: none;
 }
 
-/* Responsive Styles */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .booking-content {
         flex-direction: column;
         align-items: center;
@@ -286,7 +285,7 @@ input[type="submit"]:focus {
         text-align: center;
         margin-bottom: 20px;
     }
-}
+} */
 
 
 .map .content {
@@ -462,7 +461,7 @@ input[type="submit"]:focus {
 .footer::after {
     content: '';
     position: absolute;
-    top: -9.9vw;
+    top: -9.8vw;
     left: 0;
     height: 0;
     width: 0;
