--- a/style.css
+++ b/style.css
@@ -550,7 +550,7 @@ footer a:hover {
     }
 
     .booking-text {
-        padding-left: 5%;
+        padding: 5%;
     }
 
     .contact-form {
@@ -660,8 +660,7 @@ footer a:hover {
     }
 
     .form-wrapper {
-        width: 120%;
-        padding-left: 10%;
+        width: 100%;
 
     }
 
