--- a/style.css
+++ b/style.css
@@ -605,7 +605,7 @@ footer a:hover {
     }
 
     .hero {
-        height: 300px;
+        height: 400px;
     }
 
     .booking-img img {
@@ -713,6 +713,9 @@ footer a:hover {
         margin-bottom: 20px;
     }
 
+    .hero {
+        height: 300px;
+    }
 }
 
 @media (max-width: 480px) {
