--- a/style.css
+++ b/style.css
@@ -634,10 +634,10 @@ footer a:hover {
 }
 
 @media (max-width: 768px) {
-    /* .nav ul {
-        flex-direction: column;
-        gap: 10px;
-    } */
+    .nav ul {
+        font-size: 14px;
+        gap: 10%;
+    }
 
     .intro h1 {
         font-size: 200%;
