--- a/style.css
+++ b/style.css
@@ -709,7 +709,7 @@ footer a:hover {
     }
 
     .booking-text {
-        text-align: center;
+        /* text-align: center; */
         margin-bottom: 20px;
     }
 
